--- a/css/ejemplo1.css
+++ b/css/ejemplo1.css
@@ -4,15 +4,15 @@ body{
 .ContainerTextHead{
     width: 50%;
     margin-top: 8.5%;
-    background-color: #0c7489;
+    background-color: #fb8f67;
 }
-.ContainerTextHead{
+.ContainerTextBase{
     width: 50%;
-    margin-top: 8.5%;
-    background-color: #0c7489;
+    background-color: #fbb13c;
 }
 .container{
-    width: 70%;
+    height: 450px;
+    width: 50%;
     background-color: #004346;
 }
 .containerFormGestion{
